; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/m5602/extr_m5602_ov9650.c_ov9650_set_hflip.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/m5602/extr_m5602_ov9650.c_ov9650_set_hflip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }
%struct.sd = type { i32* }

@D_V4L2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Set horizontal flip to %d\00", align 1
@HFLIP_IDX = common dso_local global i64 0, align 8
@ov9650_flip_dmi_table = common dso_local global i32 0, align 4
@VFLIP_IDX = common dso_local global i64 0, align 8
@OV9650_MVFP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gspca_dev*, i32)* @ov9650_set_hflip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ov9650_set_hflip(%struct.gspca_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.gspca_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.sd*, align 8
  %8 = alloca i32*, align 8
  store %struct.gspca_dev* %0, %struct.gspca_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.gspca_dev*, %struct.gspca_dev** %3, align 8
  %10 = bitcast %struct.gspca_dev* %9 to %struct.sd*
  store %struct.sd* %10, %struct.sd** %7, align 8
  %11 = load %struct.sd*, %struct.sd** %7, align 8
  %12 = getelementptr inbounds %struct.sd, %struct.sd* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %8, align 8
  %14 = load i32, i32* @D_V4L2, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @PDEBUG(i32 %14, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = load i64, i64* @HFLIP_IDX, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  store i32 %17, i32* %20, align 4
  %21 = load i32, i32* @ov9650_flip_dmi_table, align 4
  %22 = call i32 @dmi_check_system(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %34, label %24

24:                                               ; preds = %2
  %25 = load i32, i32* %4, align 4
  %26 = and i32 %25, 1
  %27 = shl i32 %26, 5
  %28 = load i32*, i32** %8, align 8
  %29 = load i64, i64* @VFLIP_IDX, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = shl i32 %31, 4
  %33 = or i32 %27, %32
  store i32 %33, i32* %6, align 4
  br label %47

34:                                               ; preds = %2
  %35 = load i32, i32* %4, align 4
  %36 = and i32 %35, 1
  %37 = shl i32 %36, 5
  %38 = load i32*, i32** %8, align 8
  %39 = load i64, i64* @VFLIP_IDX, align 8
  %40 = getelementptr inbounds i32, i32* %38, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = icmp ne i32 %41, 0
  %43 = xor i1 %42, true
  %44 = zext i1 %43 to i32
  %45 = shl i32 %44, 4
  %46 = or i32 %37, %45
  store i32 %46, i32* %6, align 4
  br label %47

47:                                               ; preds = %34, %24
  %48 = load %struct.sd*, %struct.sd** %7, align 8
  %49 = load i32, i32* @OV9650_MVFP, align 4
  %50 = call i32 @m5602_write_sensor(%struct.sd* %48, i32 %49, i32* %6, i32 1)
  store i32 %50, i32* %5, align 4
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @PDEBUG(i32, i8*, i32) #1

declare dso_local i32 @dmi_check_system(i32) #1

declare dso_local i32 @m5602_write_sensor(%struct.sd*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
